[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Sprites/Pies/SteacknCheeseIdle2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Sprites/Pies/MincePieIdle1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Sprites/Pies/ButterChickenIdle0.png" type="Texture" id=3]
[ext_resource path="res://Art/Untitled.png" type="Texture" id=4]
[ext_resource path="res://Art/Tent.png" type="Texture" id=5]
[ext_resource path="res://TilesTransparent3.png" type="Texture" id=6]
[ext_resource path="res://Art/Planks.png" type="Texture" id=7]
[ext_resource path="res://Art/table.png" type="Texture" id=8]
[ext_resource path="res://cutScene/Ending.gd" type="Script" id=9]
[ext_resource path="res://Art/CutsceneStuff.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Sprites/Dag/Idle0.png" type="Texture" id=11]
[ext_resource path="res://cutScene/storyEnd.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 216.503, 26.0847 )

[node name="Ending" type="Node2D"]
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 307, 508 )
scale = Vector2( 0.57505, 0.57505 )
texture = ExtResource( 4 )
offset = Vector2( 295.627, -386.054 )
region_enabled = true
region_rect = Rect2( 2759.92, 3459.74, 3202.77, 2012.73 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tent1" type="Sprite" parent="."]
position = Vector2( -38, 312 )
texture = ExtResource( 5 )
offset = Vector2( 321, 167 )

[node name="Tent2" type="Sprite" parent="."]
position = Vector2( 206, 313 )
texture = ExtResource( 5 )
offset = Vector2( 321, 167 )

[node name="Tent3" type="Sprite" parent="."]
position = Vector2( 451, 313 )
texture = ExtResource( 5 )
offset = Vector2( 321, 167 )

[node name="Planks1" type="Sprite" parent="."]
position = Vector2( 125, 585 )
scale = Vector2( 0.57505, 0.57505 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Planks1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planks1/StaticBody2D"]
position = Vector2( 0, 0.00012207 )
shape = SubResource( 1 )

[node name="Planks2" type="Sprite" parent="."]
position = Vector2( 373, 585 )
scale = Vector2( 0.57505, 0.57505 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Planks2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planks2/StaticBody2D"]
position = Vector2( -0.869446, 0.00012207 )
shape = SubResource( 1 )

[node name="Planks3" type="Sprite" parent="."]
position = Vector2( 621, 585 )
scale = Vector2( 0.57505, 0.57505 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Planks3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planks3/StaticBody2D"]
position = Vector2( -0.869446, 0.00012207 )
shape = SubResource( 1 )

[node name="Planks4" type="Sprite" parent="."]
position = Vector2( 870, 585 )
scale = Vector2( 0.57505, 0.57505 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Planks4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planks4/StaticBody2D"]
position = Vector2( -0.869446, 0.00012207 )
shape = SubResource( 1 )

[node name="Planks5" type="Sprite" parent="."]
position = Vector2( -123, 585 )
scale = Vector2( 0.57505, 0.57505 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Planks5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planks5/StaticBody2D"]
position = Vector2( -0.869446, 0.00012207 )
shape = SubResource( 1 )

[node name="Planks6" type="Sprite" parent="."]
position = Vector2( -371, 585 )
scale = Vector2( 0.57505, 0.57505 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Planks6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planks6/StaticBody2D"]
position = Vector2( -0.869446, 0.00012207 )
shape = SubResource( 1 )

[node name="table" type="Sprite" parent="."]
position = Vector2( 286, 538 )
texture = ExtResource( 8 )

[node name="table2" type="Sprite" parent="."]
position = Vector2( 540, 539 )
texture = ExtResource( 8 )

[node name="sea" type="Sprite" parent="."]
position = Vector2( 344, 675 )
scale = Vector2( 0.445946, 0.445946 )
texture = ExtResource( 6 )
offset = Vector2( -964.242, 0 )
region_enabled = true
region_rect = Rect2( 138.855, 3405.84, 1927.69, 333.043 )

[node name="sea2" type="Sprite" parent="."]
position = Vector2( 1203, 675 )
scale = Vector2( 0.445946, 0.445946 )
texture = ExtResource( 6 )
offset = Vector2( -964.242, 0 )
flip_h = true
region_enabled = true
region_rect = Rect2( 138.855, 3405.84, 1927.69, 333.043 )

[node name="dagPieButter" type="Sprite" parent="."]
visible = false
position = Vector2( 240, 499 )
scale = Vector2( 0.59375, 0.59375 )
texture = ExtResource( 3 )

[node name="dagPieSteak" type="Sprite" parent="."]
visible = false
position = Vector2( 282, 500 )
scale = Vector2( 0.53125, 0.53125 )
texture = ExtResource( 2 )

[node name="DagPieMince" type="Sprite" parent="."]
visible = false
position = Vector2( 326, 500 )
scale = Vector2( 0.5625, 0.5625 )
texture = ExtResource( 1 )

[node name="PieButter" type="Sprite" parent="."]
visible = false
position = Vector2( 498, 501 )
scale = Vector2( 0.59375, 0.59375 )
texture = ExtResource( 3 )

[node name="PieSteak" type="Sprite" parent="."]
visible = false
position = Vector2( 582, 500 )
scale = Vector2( 0.53125, 0.53125 )
texture = ExtResource( 2 )

[node name="PieMince" type="Sprite" parent="."]
visible = false
position = Vector2( 541, 500 )
scale = Vector2( 0.5625, 0.5625 )
texture = ExtResource( 1 )

[node name="Dag" type="Sprite" parent="."]
position = Vector2( 185, 512 )
scale = Vector2( 1.8125, 1.8125 )
texture = ExtResource( 11 )

[node name="bag guy" type="Sprite" parent="."]
position = Vector2( 615, 517 )
scale = Vector2( 1.8125, 1.8125 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 828.793, 285.672, 30.0803, 57.5449 )

[node name="bag guy2" type="Sprite" parent="."]
position = Vector2( 374, 496 )
scale = Vector2( 1.8125, 1.8125 )
texture = ExtResource( 10 )
flip_h = true
region_enabled = true
region_rect = Rect2( 890.306, 262.538, 43.2886, 81.5136 )

[node name="storybox" parent="." instance=ExtResource( 12 )]
margin_left = 292.0
margin_top = 150.0
margin_right = 673.0
margin_bottom = 376.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 520, 321 )
current = true
